--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,8 @@
     <color name="colorAccent">#D81B60</color>
 
     <color name="grey_100">#F5F5F5</color>
-    <color name="grey_300">#E0E0E0</color>
+    <color name="white">#ffffff</color>
+    <color name="grey_300">#ffffff</color>
     <color name="grey_500">#9E9E9E</color>
     <color name="light_olive_green">#97c255</color>
 
