--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
             android:theme="@style/ThemeOverlay.MyTitleText" />
 
         <Button
-            android:id="@+id/btn_gohomefed"
+            android:id="@+id/btn_goEnterdetailed"
             style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
