--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#97c255</color>
     <color name="colorAccent">#D81B60</color>
 
-    <color name="grey_100">#F5F5F5</color>
+    <color name="grey_100">#f5f5f5</color>
     <color name="white">#ffffff</color>
     <color name="grey_300">#ffffff</color>
     <color name="grey_500">#9e9e9e</color>
