--- a/app/src/main/res/layout/activity_homefeed.xml
+++ b/app/src/main/res/layout/activity_homefeed.xml
@@ -133,8 +133,17 @@
         android:id="@+id/addpost"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:background="@drawable/addpost"
         android:layout_alignRight="@id/fragment_container"
-        android:layout_alignBottom="@id/fragment_container"/>
+        android:layout_alignBottom="@id/fragment_container"
+        android:background="@drawable/addpost"
+        android:onClick="refresh" />
+
+    <Button
+        android:id="@+id/refresh"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:background="@drawable/refresh"
+        android:layout_alignRight="@id/fragment_container"
+        android:layout_above="@id/addpost"/>
 
 </RelativeLayout>
