--- a/app/src/main/res/layout/activity_detailed_post.xml
+++ b/app/src/main/res/layout/activity_detailed_post.xml
@@ -68,20 +68,40 @@
                         android:layout_height="wrap_content"
                         android:text="Title"
                         android:textSize="35sp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="5dp"
+                        android:layout_marginLeft="5dp"
+                        android:layout_marginRight="5dp"
                         android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/dp_user_id"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginBottom="10dp"
+                        android:layout_marginLeft="5dp"
+                        android:layout_marginRight="5dp"
                         android:text="@string/hint_user_id" />
+
+                    <TextView
+                        android:id="@+id/dp_posted_time"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:layout_marginRight="5dp"
+                        android:text="TextView" />
 
                     <TextView
                         android:id="@+id/dp_body"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:layout_marginLeft="5dp"
+                        android:layout_marginRight="5dp"
                         android:text="body"
-                        android:textSize="20sp"
+                        android:textSize="15sp"
                         android:textStyle="normal" />
                 </LinearLayout>
             </android.support.v7.widget.CardView>
