--- a/app/src/main/res/layout/fragment_activities.xml
+++ b/app/src/main/res/layout/fragment_activities.xml
@@ -11,7 +11,7 @@
         android:layout_height="match_parent" />
 
     <ProgressBar
-        android:id="@+id/progress_bar_r"
+        android:id="@+id/progress_bar"
         style="?android:attr/progressBarStyle"
         android:layout_alignBottom="@id/feeds_activities"
         android:layout_width="wrap_content"
