--- a/app/src/main/res/layout/activity_detailed_post.xml
+++ b/app/src/main/res/layout/activity_detailed_post.xml
@@ -81,19 +81,47 @@
                         android:textSize="15sp"
                         android:textStyle="normal" />
 
-                    <Button
-                        android:id="@+id/postDelete"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@color/colorAccent"
-                        android:onClick="deletePostAffirm"
-                        android:text="삭제하기"
-                        android:visibility="gone" />
-
                 </LinearLayout>
             </android.support.v7.widget.CardView>
 
+            <ListView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" >
+
+            </ListView>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <EditText
+                    android:id="@+id/input_comment_context"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:hint="댓글 쓰기" />
+
+                <Button
+                    android:id="@+id/btn_comment_input"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:onClick="onClickwriteComment"
+                    android:text="입력" />
+            </LinearLayout>
+
+            <Button
+                android:id="@+id/postDelete"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/colorAccent"
+                android:onClick="deletePostAffirm"
+                android:text="삭제하기"
+                android:visibility="gone" />
+
         </LinearLayout>
     </ScrollView>
+
+
 
 </LinearLayout>
