--- a/app/src/main/res/layout/item_feeds.xml
+++ b/app/src/main/res/layout/item_feeds.xml
@@ -81,8 +81,8 @@
                 android:id="@+id/likes_comments"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_below="@+id/info">
+                android:layout_below="@+id/info"
+                android:orientation="horizontal">
 
                 <ImageView
                     android:id="@+id/like"
