--- a/app/src/main/res/layout/activity_detailed_post.xml
+++ b/app/src/main/res/layout/activity_detailed_post.xml
@@ -93,12 +93,6 @@
                 </LinearLayout>
             </android.support.v7.widget.CardView>
 
-            <ListView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" >
-
-            </ListView>
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -118,6 +112,13 @@
                     android:onClick="onClickwriteComment"
                     android:text="입력" />
             </LinearLayout>
+
+            <ListView
+                android:id="@+id/list_comments"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+            </ListView>
 
             <Button
                 android:id="@+id/postDelete"
