--- a/app/src/main/res/layout/activity_detailed_post.xml
+++ b/app/src/main/res/layout/activity_detailed_post.xml
@@ -37,6 +37,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="390dp"
                         android:layout_gravity="center"
+                        android:visibility="gone"
                         app:srcCompat="@drawable/splash_img" />
 
 
