--- a/app/src/main/res/layout/home_fragments.xml
+++ b/app/src/main/res/layout/home_fragments.xml
@@ -5,15 +5,20 @@
     android:layout_height="match_parent"
     tools:context=".FCook">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/feeds_room"
+    <android.support.v4.widget.SwipeRefreshLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:id="@+id/swipe_layout">
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/feeds"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </android.support.v4.widget.SwipeRefreshLayout>
 
     <ProgressBar
         android:id="@+id/progress_bar"
         style="?android:attr/progressBarStyle"
-        android:layout_alignBottom="@id/feeds_room"
+        android:layout_alignBottom="@id/swipe_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
