--- a/app/src/main/res/layout/item_feeds.xml
+++ b/app/src/main/res/layout/item_feeds.xml
@@ -16,41 +16,48 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/postedImage"
-                android:layout_width="150dp"
-                android:layout_height="150dp" />
-
             <LinearLayout
+                android:id="@+id/post_body"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_toRightOf="@+id/postedImage"
-                android:orientation="vertical">
+                android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/title"
+                <ImageView
+                    android:id="@+id/postedImage"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp" />
+
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginRight="5dp"
-                    android:text="Title"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
+                    android:layout_toRightOf="@+id/postedImage"
+                    android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/detail"
-                    android:layout_width="match_parent"
-                    android:layout_height="99dp"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginRight="5dp"
-                    android:text="Write here" />
+                    <TextView
+                        android:id="@+id/title"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:layout_marginRight="5dp"
+                        android:text="Title"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
+
+                    <TextView
+                        android:id="@+id/detail"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginRight="5dp"
+                        android:text="Write here" />
+                </LinearLayout>
             </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/info"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/postedImage"
+                android:layout_below="@id/post_body"
                 android:orientation="horizontal">
 
                 <TextView
@@ -75,31 +82,35 @@
                     android:layout_weight="2"
                     android:text="Time" />
 
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/likes_comments"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/info"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/like"
+                <LinearLayout
+                    android:id="@+id/likes_comments"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/info"
-                    android:layout_marginTop="3dp"
-                    app:srcCompat="@drawable/like" />
+                    android:layout_marginStart="5dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginEnd="5dp"
+                    android:layout_marginBottom="5dp"
+                    android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/likes_count"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:layout_weight="0"
-                    android:text="0"
-                    android:textSize="15sp" />
+                    <ImageView
+                        android:id="@+id/like"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/info"
+                        android:layout_marginTop="3dp"
+                        app:srcCompat="@drawable/like" />
+
+                    <TextView
+                        android:id="@+id/likes_count"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:layout_weight="0"
+                        android:text="0"
+                        android:textSize="15sp" />
+                </LinearLayout>
+
             </LinearLayout>
 
         </RelativeLayout>
