--- a/app/src/main/res/layout/activity_detailed_post.xml
+++ b/app/src/main/res/layout/activity_detailed_post.xml
@@ -91,6 +91,15 @@
                         android:textSize="15sp"
                         android:textStyle="normal" />
 
+                    <Button
+                        android:id="@+id/find_location"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:backgroundTint="@color/light_olive_green"
+                        android:text="음식점 위치 검색하기"
+                        android:textColor="@color/white"
+                        android:visibility="gone" />
+
                 </LinearLayout>
             </android.support.v7.widget.CardView>
 
